[package]
name = "tickers"
version = "0.1.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>"]

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
awc = { version = "3.0.0-beta.21", features = [ "rustls" ] }
log = "0.4"
rustls = "0.20"
webpki-roots = "0.22"
serde = "1.0.105"
serde_derive = "1.0"
serde_json = "1.0.48"
anyhow = "1.0"
